third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking/typing/constant_all_valid_types.exp
module 0x42::M {
    fun t1(): u8 {
        0u8
    }
    fun t2(): u64 {
        0
    }
    fun t3(): u128 {
        0u128
    }
    fun t4(): bool {
        false
    }
    fun t5(): address {
        0x0
    }
    fun t6(): vector<u8> {
        vector[1u8, 35u8]
    }
    fun t7(): vector<u8> {
        vector[97u8, 98u8, 99u8, 100u8]
    }
    fun t8(): vector<address> {
        vector[0x0, 0x1]
    }
    fun t9(): u8 {
        0u8
    }
}

script {
    entry fun <SELF>_0() {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
   ┌─ constant_all_valid_types.move:32:15
   │
32 │     entry fun <SELF>_0() {
   │               ^
   │               │
   │               Unexpected '<'
   │               Expected an identifier
